# FinderSidebarEditor

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: python-app.yml
finder_sidebar_editor/: FinderSidebarEditor.py  cli.py
tests/: test_cli.py  test_finder_sidebar.py
