[tool.poetry]
name = "finder-sidebar-editor"
version = "1.3.0"
description = "Module and CLI for editing the Favorites entries of the Finder sidebar."
authors = ["Ajordat <alexjortri@gmail.com>","aberezin <alan.berezin1@gmail.com>"]
maintainers = ["Ajordat <alexjortri@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers=[
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.7.1"
typer = "^0.12.3"
pyobjc = "^10.2"

[tool.poetry.scripts]
finder-sidebar-editor = "finder_sidebar_editor.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
